--- a/packages.config
+++ b/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ClearScript.Core" version="7.3.1" targetFramework="net48" />
-  <package id="Microsoft.ClearScript.V8" version="7.3.1" targetFramework="net48" />
-  <package id="Microsoft.ClearScript.V8.ICUData" version="7.3.1" targetFramework="net48" />
-  <package id="Microsoft.ClearScript.V8.Native.win-x64" version="7.3.1" targetFramework="net48" />
-  <package id="Microsoft.ClearScript.V8.Native.win-x86" version="7.3.1" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="System.IO" version="4.3.0" targetFramework="net48" />
-  <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net48" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
+  <package id="ILMerge.MSBuild.Task" version="1.0.7" targetFramework="net462" />
+  <package id="Microsoft.ClearScript.Core" version="7.3.1" targetFramework="net462" />
+  <package id="Microsoft.ClearScript.V8" version="7.3.1" targetFramework="net462" />
+  <package id="Microsoft.ClearScript.V8.ICUData" version="7.3.1" targetFramework="net462" />
+  <package id="Microsoft.ClearScript.V8.Native.win-x64" version="7.3.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
