--- a/js4irc.csproj
+++ b/js4irc.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\ILMerge.3.0.41\build\ILMerge.props" Condition="Exists('packages\ILMerge.3.0.41\build\ILMerge.props')" />
   <Import Project="packages\Microsoft.ClearScript.V8.Native.win-x64.7.3.1\build\Microsoft.ClearScript.V8.Native.win-x64.props" Condition="Exists('packages\Microsoft.ClearScript.V8.Native.win-x64.7.3.1\build\Microsoft.ClearScript.V8.Native.win-x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -71,6 +72,9 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.ClearScript.V8.Native.win-x86">
+      <Version>7.3.1</Version>
+    </PackageReference>
     <Reference Include="AdiIRCAPIv2">
       <HintPath>..\..\..\Desktop\Adiirc\AdiIRCAPIv2.dll</HintPath>
     </Reference>
@@ -115,9 +119,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <PackageReference Include="ILMerge" Version="3.0.29" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="js4irc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -133,7 +138,14 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.ClearScript.V8.Native.win-x64.7.3.1\build\Microsoft.ClearScript.V8.Native.win-x64.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.ClearScript.V8.Native.win-x64.7.3.1\build\Microsoft.ClearScript.V8.Native.win-x64.props'))" />
-    <Error Condition="!Exists('packages\ILMerge.MSBuild.Task.1.0.7\build\ILMerge.MSBuild.Task.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ILMerge.MSBuild.Task.1.0.7\build\ILMerge.MSBuild.Task.targets'))" />
+    <Error Condition="!Exists('packages\ILMerge.3.0.41\build\ILMerge.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\ILMerge.3.0.41\build\ILMerge.props'))" />
   </Target>
-  <Import Project="packages\ILMerge.MSBuild.Task.1.0.7\build\ILMerge.MSBuild.Task.targets" Condition="Exists('packages\ILMerge.MSBuild.Task.1.0.7\build\ILMerge.MSBuild.Task.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>$(ILMergeConsolePath) $(ProjectDir)$(OutDir)\$(TargetFileName) ^
+  /out:$(ProjectDir)$(OutDir)\$(TargetFileName) ^
+  $(ProjectDir)$(OutDir)\ClearScript.V8.dll ^
+  $(ProjectDir)$(OutDir)\ClearScript.Core.dll ^
+  $(ProjectDir)$(OutDir)\Newtonsoft.Json.dll ^
+  $(ProjectDir)$(OutDir)\ClearScript.V8.ICUData.dll</PostBuildEvent>
+  </PropertyGroup>
 </Project>
