--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILMerge.MSBuild.Task" version="1.0.7" targetFramework="net462" />
+  <package id="ILMerge" version="3.0.41" targetFramework="net462" />
   <package id="Microsoft.ClearScript.Core" version="7.3.1" targetFramework="net462" />
   <package id="Microsoft.ClearScript.V8" version="7.3.1" targetFramework="net462" />
   <package id="Microsoft.ClearScript.V8.ICUData" version="7.3.1" targetFramework="net462" />
